src/tests/functionality/assignment_5_functions_headers/valid/13_mandatory_include_header_defines.c
#include "src/tests/functionality/assignment_5_functions_headers/headers/defines.h"

int main() {
    BOOL x = TRUE;
    return TEN + x;
}
