src/tests/functionality/assignment_5_functions_headers/invalid_semantic/13_mandatory_function_redefinition_same_file.c
int f(int x) {
    return x + 1;
}

int f(int x) {
    return x + 2;
}

int main() {
    return f(1);
}
